objects/Rosco_Time__c/Rosco_Time__c.object-meta.xml
<CustomObject>
    <label>Rosco_Time</label>
    <nameField>
        <displayFormat>Time{00000000}</displayFormat>
        <label>Time Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rosco_Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>