objects/Rosco_Time__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rosco_Times</relationshipLabel>
    <relationshipName>Rosco_Times</relationshipName>
    <type>Lookup</type>
</CustomField>