objects/Rosco_Time__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Rosco_Times</relationshipLabel>
    <relationshipName>Rosco_Times</relationshipName>
    <type>Lookup</type>
</CustomField>