objects/Rosco_Time__c/fields/Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Level__c</fullName>
    <label>Escalation Level</label>
    <length>32</length>
    <type>Text</type>
</CustomField>