objects/Rosco_Time__c/fields/Is_Case_Owner_Entry__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Owner_Entry__c</fullName>
    <description>True if the Case Owner Id is the same as the user who logged entry</description>
    <formula>IF(Case__r.OwnerId = User__c ,&apos;True&apos;,&apos;False&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Owner Entry</label>
    <type>Text</type>
</CustomField>