objects/Rosco_Time__c/fields/LaborCategory__c.field-meta.xml
<CustomField>
    <fullName>LaborCategory__c</fullName>
    <label>LaborCategory</label>
    <length>32</length>
    <type>Text</type>
</CustomField>