objects/Rosco_Time__c/fields/LaborChildCategory__c.field-meta.xml
<CustomField>
    <fullName>LaborChildCategory__c</fullName>
    <description>Tertiary/Grandchild category for Time Labor (initially only used by Presales time logging)</description>
    <inlineHelpText>Tertiary/Grandchild category for Time Labor (initially only used by Presales time logging)</inlineHelpText>
    <label>LaborChildCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>