objects/Rosco_Time__c/fields/LaborDate__c.field-meta.xml
<CustomField>
    <fullName>LaborDate__c</fullName>
    <label>LaborDate</label>
    <type>DateTime</type>
</CustomField>