objects/Rosco_Time__c/fields/LaborSubCategory__c.field-meta.xml
<CustomField>
    <fullName>LaborSubCategory__c</fullName>
    <label>LaborSubCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>