objects/Rosco_Time__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Rosco_Times</relationshipLabel>
    <relationshipName>Rosco_Times</relationshipName>
    <type>Lookup</type>
</CustomField>