objects/Rosco_Time__c/fields/OwnerCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>OwnerCurrentUser__c</fullName>
    <formula>CASE($User.Id,     
User__c,&apos;True&apos;,     
User__r.Manager.Id,&apos;True&apos;,     
User__r.Manager.Manager.Id,&apos;True&apos;,     
User__r.Manager.Manager.Manager.Id,&apos;True&apos;,     
&apos;False&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Current User</label>
    <type>Text</type>
</CustomField>