objects/Rosco_Time__c/fields/Support_AI_Agent_Tool_Development__c.field-meta.xml
<CustomField>
    <fullName>Support_AI_Agent_Tool_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS-13441: Add a check box on case time card to indicate of AI Tooling Developed</description>
    <label>Support AI Agent Tool Development</label>
    <type>Checkbox</type>
</CustomField>