objects/Rosco_Time__c/fields/Support_AI_Agent_Tool_Used_on_Case__c.field-meta.xml
<CustomField>
    <fullName>Support_AI_Agent_Tool_Used_on_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS-13441: Add a check box on case time card to indicate of AI Used</description>
    <label>Support AI Agent Tool Used on Case</label>
    <type>Checkbox</type>
</CustomField>